--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -8,24 +8,33 @@ workflows:
         BUILD_PRESET: "ios-release-conan"
         BUILD_TYPE: "Release"
         BUNDLE_IDENTIFIER_PREFIX: "com.example"
-        DEVELOPMENT_TEAM: "0000000000"
+        DEFAULT_TEAM: "0000000000"
         APP_NAME: "VCMI"
     scripts:
       - name: Install dependencies
         script: |
           brew install cmake conan ccache
           conan profile detect --force
-          # Conan home cache fix for Codemagic
           mkdir -p ~/.conan2
-          echo "Detected Conan profile:"
-          cat ~/.conan2/profiles/default || true
+
+      - name: Run Conan to install dependencies
+        script: |
+          # Conan 2.x syntax
+          conan install . \
+            --output-folder=conan-generated \
+            --build=missing \
+            -pr:b=default \
+            -pr:h=ios-armv8
 
       - name: Configure project with CMake preset
         script: |
+          TEAM_ID=${DEVELOPMENT_TEAM:-$DEFAULT_TEAM}
           cmake --preset $BUILD_PRESET \
             -D BUNDLE_IDENTIFIER_PREFIX=$BUNDLE_IDENTIFIER_PREFIX \
             -D CMAKE_BUILD_TYPE=$BUILD_TYPE \
-            -D ENABLE_CCACHE=ON
+            -D ENABLE_CCACHE=ON \
+            -D CMAKE_XCODE_ATTRIBUTE_DEVELOPMENT_TEAM=$TEAM_ID \
+            -D CMAKE_XCODE_ATTRIBUTE_CODE_SIGN_STYLE=Automatic
 
       - name: Build VCMI via CMake
         script: |
@@ -35,8 +44,7 @@ workflows:
         script: |
           cd build-$BUILD_PRESET
           cpack -C Release || true
-          # Rename zip to ipa if necessary
-          if [ -f *.zip ]; then
+          if ls *.zip >/dev/null 2>&1; then
             ZIPFILE=$(ls *.zip | head -n 1)
             mv "$ZIPFILE" "${ZIPFILE%.zip}.ipa"
           fi
